--- a/python/install
+++ b/python/install
@@ -10,7 +10,7 @@ if [ -z "$DOTFILES" ]; then
   echo ".dotfiles repo is not set up"
   exit 1
 fi
-source "${DOTFILES}/shell/helpers.bash"
+. "${DOTFILES}/shell/helpers.bash"
 
 # =============================================================================
 # Main
