fix dko helper call name changes

--- a/python/install
+++ b/python/install
@@ -19,25 +19,25 @@ fi
 __install() {
   # Make sure not using system python and pip
   if pip --version | grep -q /usr/lib; then
-    dko::err  "System pip detected, not running. Use a userspace python's pip."
+    __dko_err  "System pip detected, not running. Use a userspace python's pip."
     exit 1
   fi
 
   # Make sure has pyenv
-  if ! dko::has "pyenv"; then
-    dko::err  "pyenv is not installed. Install it and set up a global pyenv."
+  if ! __dko_has "pyenv"; then
+    __dko_err  "pyenv is not installed. Install it and set up a global pyenv."
     exit 1
   fi
 
   if pyenv version | grep system >/dev/null; then
-    dko::err  "Using system pyenv. Use real pyenv instead."
+    __dko_err  "Using system pyenv. Use real pyenv instead."
     exit 1
   fi
 
-  dko::status "Updating global pip"
+  __dko_status "Updating global pip"
   pip install --upgrade pip
 
-  dko::status "Updating global pip requirements"
+  __dko_status "Updating global pip requirements"
   pip install --upgrade --requirement "${DOTFILES}/python/requirements.txt"
 }
 
