--- a/node/install
+++ b/node/install
@@ -10,6 +10,7 @@ if [ -z "$DOTFILES" ]; then
   echo ".dotfiles repo is not set up"
   exit 1
 fi
+. "${DOTFILES}/lib/helpers.sh"
 . "${DOTFILES}/lib/pretty.bash"
 
 # =============================================================================
@@ -18,16 +19,16 @@ fi
 
 # @TODO check for nvm node
 __install() {
-  dko::status "Installing latest npm"
+  __dko_status "Installing latest npm"
   npm install --global --production npm@latest
 
-  dko::status "Installing Yeoman"
+  __dko_status "Installing Yeoman"
   npm install --global --production yo
 
-  dko::status "Checking npm environment using yo doctor"
+  __dko_status "Checking npm environment using yo doctor"
   yo doctor || exit 1
 
-  dko::status "Installing global node packages"
+  __dko_status "Installing global node packages"
   # peer dep packages
   npm install --global --production eslint
 
